cli/tests/ui/governance_policies_requires_version.stderr
Error: manifest::feature_requires_manifest_version

  × check failed
  ╰─▶ using governance `policies` section requires manifest_version >= 0.4.0,
      but found 0.3.0
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/governance_policies_requires_version.json5:3:14]
 2 │   manifest_version: "0.3.0",
 3 │   policies: ["#wrapper.rewrite"],
   ·              ─────────┬────────
   ·                       ╰── unsupported manifest feature used here
 4 │ }
   ╰────
  help: set `manifest_version` to "0.4.0" or remove governance `policies`
        section
